# GRAAL

./: .gitignore  .nojekyll  .pre-commit-config.yaml  README.md  explorations.py  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: build-images.yaml  deploy_prez.yml
presentation/: _quarto_internal_scss_error.scss  presentation.qmd
presentation/_preview/: search.json
src/: build_graph_db.py  config.py  evaluate.py  explorations.py  hierarchical_navigator.py  main.py  test.py  test2.py  test_agent.py  xxx.py
src/agent/: agent.py
src/agents/: base_agent.py
src/agents/Code2Text/: code2text.py
src/agents/Code2Text/agent/: __init__.py  code2text_agent.py
src/agents/Text2Code/: text2code.py
src/agents/Text2Code/classifiers/: agentic_rag.py  base_classifier.py  navigator_agent.py  navigator_classifier.py
src/agents/closers/: __init..py  __init__.py  code_chooser.py  match_verifier.py
src/api/: main.py
src/api/routes/: agent.py
src/classify/: agent.py
src/classify/agentic/: create_agent.py  hierarchical_navigator.py
src/closers/: Closer.py  __init..py
src/closers/CodeChooser/: CodeChooser.py
src/closers/MatchVerifier/: MatchVerifier.py
src/constants/: graph_db.py
src/judge/: judge_llm.py
src/llm/: client.py  responses.py
src/navigator/: Navigator.py  hierarchical_navigator.py  navigator.py
src/neo4j_graph/: CachedNeo4j.py  Graph.py  Node.py  graph.py  loaders.py
src/neo4j_graph/graph_builder/: build_graph_db.py
src/neo4j_graph/graph_builder/config/: __init__.py  config.py
src/neo4j_graph/graph_builder/utils/: db_manager.py  embed_manager.py  (+1 more)
src/presentation/: custom.scss  prensentation.ipynb  presentation.qmd  presentation2.qmd
src/presentation/.jupyter_cache/: global.db
src/presentation/template/: template.qmd
src/utils/: parser.py
src/vector_db/: loaders.py
(+1 files in other folders)
