[project]
name = "graal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-cache>=1.0.1",
    "langchain-neo4j>=0.6.0",
    "langchain-openai>=1.1.4",
    "langfuse>=3.11.2",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "openai-agents>=0.6.3",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
