[project]
name = "graal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter-cache>=1.0.1",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.6.0",
    "langchain-openai>=1.1.4",
    "langchain-text-splitters>=1.1.0",
    "langfuse>=3.11.2",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "openai-agents>=0.6.3",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "s3fs>=2024.12.0",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
